# protein-interface

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  environment-gpu.yml  pyproject.toml
.github/workflows/: release.yml
benchmark/: contact_metric_speed.py  sasa_speed.py  sasa_vs_freesasa.py  sc_cli_head_to_head.py  speed.py
docs/: openmm.md
python/protein_interface/: __init__.py  batch.py  interface.py  io.py  openmm.py  residue_classifier.py
src/: contacts.rs  hbonds.rs  lib.rs  salt_bridges.rs  sasa.rs
tests/: conftest.py  sc_spatial_parity.rs  test_boltzgen.py  test_contact_performance.py  test_core.py  test_format_equivalence.py  test_interface.py  test_interface_residues.py  test_io.py  test_openmm.py  test_parity.py  test_prodigy.py  test_sasa_performance.py  test_sc_performance.py  test_vs_boltzgen.py  test_vs_freesasa.py
tests/data/: boltzgen_refold_ubiquitin.cif
