[package]
name = "protein-interface"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
rayon = "1.10"
sc_rs = { git = "https://github.com/cytokineking/sc-rs", tag = "v1.0.0", package = "sc-rs" }

[profile.release]
lto = "fat"
codegen-units = 1
