[package]
name = "protein-interface"
version = "0.1.2"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
test = false

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310"] }
rayon = "1.10"
sc_rs = { path = "vendor/sc-rs", package = "sc-rs" }

[profile.release]
lto = "fat"
codegen-units = 1
